# mpdcron

./: .gitignore  Makefile.am  NEWS.mkd  README.mkd  _config.yml  autogen.sh  configure.ac  index.md
_includes/: footer.html  google-analytics.html  menu.html
_layouts/: default.html
conf/: mpdcron.conf  mpdhooker.conf
conf/hooks/: bitrate  consume  crossfade  database  dump-outputs.rb  dump-playlists.rb  dump-queue.rb  dump-song.bash  dump-stats.bash  dump-status.bash  elapsed  example.sh  lastfm.rb  mixer  options  output  player  playlist  playlist_length  queue  random  repeat  samplerate  single  song  state  stored_playlist  submit.rb  update  updatingdb  volume
conf/modules/: Makefile  example.c
configuration/: index.md
css/: screen.css
data/: Makefile.am  eugene.1  eugene.1.pdc  mpdcron.1  mpdcron.1.pdc
hooks/: index.md
modules/: gmodule.h.html  index.md  protocol.md
src/: Makefile.am  conf.c  conf.h  cron-conf.c  cron-config.h  cron-defs.h  cron-env.c  cron-event.c  cron-gmodule.c  cron-hooker.c  cron-keyfile.c  cron-log.c  cron-loop.c  cron-main.c  cron-module.c  diff.c  diff.h  hooker.c  hooker.h  keyfile.c  keyfile.h  loop.c  loop.h  main.c  mh-conf.c  mh-defs.h  mh-env.c  mh-event.c  mh-hooker.c  mh-keyfile.c  mh-loop.c  mh-main.c  mpd.c  mpd.h  valgrind.sh  valgrind.suppressions
src/gmodule/: Makefile.am  gmodule.h  utils.h
src/gmodule/inotify/: Makefile.am  inotify-defs.h  inotify-file.c  inotify-module.c  inotify-mpd.c  inotify-pattern.c
src/gmodule/notification/: Makefile.am  cover.c  file.c  module.c  notification-cover.c  notification-defs.h  notification-dhms.c  notification-file.c  notification-module.c  notification-spawn.c  notification.c
src/gmodule/scrobbler/: Makefile.am  TODO  file.c  http_client_curl.c  journal.c  module.c  scrobbler-curl.c  scrobbler-defs.h  scrobbler-file.c  scrobbler-journal.c  scrobbler-module.c  scrobbler-record.c  scrobbler-submit.c  scrobbler-timer.c  timer.c
src/gmodule/stats/: Makefile.am  empc  eugene-addtag.c  eugene-connection.c  eugene-count-absolute.c  eugene-count.c  eugene-defs.h  eugene-hate-album.c  eugene-hate-artist.c  eugene-hate-genre.c  eugene-hate-song.c  eugene-hate.c  eugene-karma.c  eugene-kill-song.c  eugene-kill.c  eugene-list.c  eugene-listinfo.c  eugene-listtags.c  eugene-load.c  eugene-love-album.c  eugene-love-artist.c  eugene-love-genre.c  eugene-love-song.c  eugene-love.c  eugene-main.c  eugene-rate-absolute.c  eugene-rate-song.c  eugene-rate.c  eugene-rmtag.c  eugene-unkill-song.c  eugene-unkill.c  eugene-update.c  eugene-utils.c  homescrape  homescrape.in  stats-command.c  stats-defs.h  stats-file.c  stats-module.c  stats-mpdclient.c  (+7 more)
src/modules/: Makefile.am  module.h
src/modules/notification/: Makefile.am  cover.c  main.c  notification-defs.h  notification.c
src/modules/scrobbler/: Makefile.am  file.c  http_client_curl.c  journal.c  main.c  record.c  scrobbler-defs.h  scrobbler.c
zsh-completion/: Makefile.am  _eugene  _mpdcron  _walrus
